--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^39.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.1",
+    "@ckeditor/ckeditor5-editor-classic": "^39.0.1",
+    "@ckeditor/ckeditor5-essentials": "^39.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^39.0.1",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^39.0.1",
+    "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
