--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
