--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
     "@ckeditor/ckeditor5-basic-styles": "^39.0.1",
@@ -18,9 +19,11 @@
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@ckeditor/ckeditor5-theme-lark": "^39.0.1",
     "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "ckeditor5-custom-build": "file:ckeditor5",
+    "firebase": "^10.3.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +40,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.3",
     "vite": "^4.4.5"
   }
 }
