--- a/server/build.gradle
+++ b/server/build.gradle
@@ -29,6 +29,21 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation' //valid 의존성추가
+
+	implementation 'org.springframework.boot:spring-boot-starter-security' //시큐리티
+	implementation 'mysql:mysql-connector-java:8.0.26'//mysql추가
+
+	implementation 'com.google.code.gson:gson'
+
+	//mapstruct 추가
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'  // JWT를 위한 jjwt 라이브러리
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'	// JWT를 위한 jjwt 라이브러리
+	runtimeOnly	'io.jsonwebtoken:jjwt-jackson:0.11.5'	// JWT를 위한 jjwt 라이브러리
 }
 
 tasks.named('test') {
