--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2
   datasource:
-    url: jdbc:h2:mem:test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url:
+    username:
+    password:
   jpa:
     hibernate:
       ddl-auto: create  # (1) 스키마 자동 생성
