--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	implementation 'com.google.api-client:google-api-client:1.32.1'
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
 	implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
+
+	implementation 'mysql:mysql-connector-java:8.0.26'
 }
 
 tasks.named('test') {
