--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -21,6 +21,6 @@ mail:
   address:
     admin: admin@gmail.com
 jwt:
-  key: lee
+  key: asdlkfjaasfljqlkj3rlkj123l41j234l1234l1j234
   access-token-expiration-minutes: 30
   refresh-token-expiration-minutes: 420
