--- a/server/build.gradle
+++ b/server/build.gradle
@@ -23,26 +23,27 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation' //valid 의존성추가
+
+	implementation 'org.springframework.boot:spring-boot-starter-security' //시큐리티
+	implementation 'mysql:mysql-connector-java:8.0.26'//mysql추가
+
+	implementation 'com.google.code.gson:gson'
+
+	//mapstruct 추가
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
-	runtimeOnly 'com.h2database:h2'
-
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-	implementation 'com.google.http-client:google-http-client-jackson2:1.43.0'
-	implementation 'com.google.api-client:google-api-client:1.32.1'
-	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
-	implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
-
-	implementation 'mysql:mysql-connector-java:8.0.26'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'  // JWT를 위한 jjwt 라이브러리
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'	// JWT를 위한 jjwt 라이브러리
+	runtimeOnly	'io.jsonwebtoken:jjwt-jackson:0.11.5'	// JWT를 위한 jjwt 라이브러리
 }
 
 tasks.named('test') {
