--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,21 +1,21 @@
 spring:
-  cors:
-    allowed-origins:
-      - http://localhost:5173  # 프론트엔드 도메인 주소
-    allowed-methods:
-      - GET
-      - POST
-      - PUT
-      - DELETE
-      - OPTIONS  # OPTIONS 메서드를 허용하는 것이 좋습니다.
-    allowed-headers:
-      - "*"  # 모든 헤더를 허용합니다. 필요에 따라 필터링 가능
-    allow-credentials: true  # 자격증명 (쿠키, 헤더)을 허용할지 여부
+#  cors:
+#    allowed-origins:
+#      - http://localhost:5173  # 프론트엔드 도메인 주소
+#    allowed-methods:
+#      - GET
+#      - POST
+#      - PUT
+#      - DELETE
+#      - OPTIONS  # OPTIONS 메서드를 허용하는 것이 좋습니다.
+#    allowed-headers:
+#      - "*"  # 모든 헤더를 허용합니다. 필요에 따라 필터링 가능
+#    allow-credentials: true  # 자격증명 (쿠키, 헤더)을 허용할지 여부
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: dnwls4545!
+    url: jdbc:mysql://${AWS_RDS_Endpoint}/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${RDS_ID}
+    password: ${RDS_PASSWORD}
   jpa:          #JPA 설정
     hibernate:
       ddl-auto: create-drop
