--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,9 +13,11 @@ spring:
     allow-credentials: true  # 자격증명 (쿠키, 헤더)을 허용할지 여부
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: dnwls4545!
+    url: jdbc:mysql://localhost:3306/db_main?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: user_assa2
+    password: 1234
+    validation:
+      exclude-until-explicit: false
   jpa:          #JPA 설정
     hibernate:
       ddl-auto: create-drop
