--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-<<<<<<< HEAD
 upload.image.path=/Users/uudean/Desktop
-=======
-spring.jpa.properties.hibernate.hbm2ddl.auto = update
->>>>>>> origin/back
+#spring.jpa.properties.hibernate.hbm2ddl.auto = update
