--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username:
-    password:
+    username: root
+    password: dnwls4545!
   jpa:          #JPA 설정
     hibernate:
       ddl-auto: create-drop
