--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-upload.image.path=/Users/uudean/Desktop
-#spring.jpa.properties.hibernate.hbm2ddl.auto = update
+spring.jpa.properties.hibernate.hbm2ddl.auto = update
+spring.security.oauth2.client.registration.google.client-id= 169762653752-0dj76a7v6g8d7q5alfbn6e0irt4pd3lr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
