--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,23 +1,16 @@
 spring:
-  oauth2:
-    client:
-      registration:
-        google:
-          client-id: 169762653752-0dj76a7v6g8d7q5alfbn6e0irt4pd3lr.apps.googleusercontent.com
-          client-secret: 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
-
-  #  cors:
-#    allowed-origins:
-#      - http://localhost:5173  # 프론트엔드 도메인 주소
-#    allowed-methods:
-#      - GET
-#      - POST
-#      - PUT
-#      - DELETE
-#      - OPTIONS  # OPTIONS 메서드를 허용하는 것이 좋습니다.
-#    allowed-headers:
-#      - "*"  # 모든 헤더를 허용합니다. 필요에 따라 필터링 가능
-#    allow-credentials: true  # 자격증명 (쿠키, 헤더)을 허용할지 여부
+    cors:
+      allowed-origins:
+        - http://localhost:5173  # 프론트엔드 도메인 주소
+      allowed-methods:
+        - GET
+        - POST
+        - PUT
+        - DELETE
+        - OPTIONS  # OPTIONS 메서드를 허용하는 것이 좋습니다.
+    allowed-headers:
+      - "*"  # 모든 헤더를 허용합니다. 필요에 따라 필터링 가능
+    allow-credentials: true  # 자격증명 (쿠키, 헤더)을 허용할지 여부
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
@@ -43,3 +36,4 @@ jwt:
   key: asdlkfjaasfljqlkj3rlkj123l41j234l1234l1j234
   access-token-expiration-minutes: 120
   refresh-token-expiration-minutes: 420
+  #
