--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     url: jdbc:mysql://localhost:3306/mainProject?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: dnwls4545!
+    validation:
+      exclude-until-explicit: false
   jpa:          #JPA 설정
     hibernate:
       ddl-auto: create-drop
