--- a/server/build.gradle
+++ b/server/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 	implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'
 
 	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // AWS S3
 }
 
 tasks.named('test') {
