--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.5.0",
     "ckeditor5-custom-build": "file:ckeditor5",
     "firebase": "^10.3.1",
+    "html-react-parser": "^4.2.2",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
